legacy map reduce fails to recreate indexes in existing output collection with two phase index builds

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-11-04
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When given an output collection that already exists, the map reduce command will copy the indexes from the original output collection. With two phase index builds, the information in the startIndexBuild and commitIndexBuild oplog entries may contain indexes that already exist in the temporary collection used by map reduce. This may result in secondaries silently ignoring the two phase index build commands due to the IndexAlreadyExists error.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: