SERVER-44344 map reduce filters existing indexes on temp collection prior to index creation